--- a/dringed.htm
+++ b/dringed.htm
@@ -12,4 +12,8 @@
         document.getElementById('camera').srcObject = stream;
       })
       .catch(function (error) {
-        alert("Camera permission denied or not
+        alert("Camera permission denied or not available!");
+      });
+  </script>
+</body>
+</html>
